--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>Karthick Coirs – Cocopeat Exporter</title>
 
 <meta name="description" content="Karthick Coirs is a leading cocopeat manufacturer and exporter in India. We supply Low EC cocopeat, High EC cocopeat, grow bags, poultry coco pith and nursery cocopeat from Palani Tamil Nadu.">
-<meta name="keywords" content="Cocopeat Manufacturer, Cocopeat Exporter India, Low EC Cocopeat, High EC Cocopeat, Grow Bags, Poultry Coco Pith, Nursery Cocopeat, Coir Pith">
+<meta name="keywords" content="Low EC Cocopeat Exporter India, Cocopeat Manufacturer Tamil Nadu, Cocopeat Supplier Palani, Coir Pith Exporter, Grow Bags Manufacturer">
+<meta name="author" content="Karthick Coirs">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -13,7 +14,7 @@ body{
 margin:0;
 font-family:Georgia,serif;
 background:
-linear-gradient(rgba(0,0,0,0.45),rgba(0,0,0,0.45)),
+linear-gradient(rgba(255,255,255,0.90),rgba(255,255,255,0.90)),
 url('coconut-bg.jpeg');
 background-size:cover;
 background-attachment:fixed;
@@ -21,15 +22,9 @@ background-position:center;
 color:#222;
 }
 
-.wrapper{
-background:rgba(255,255,255,0.94);
-max-width:1200px;
-margin:auto;
-}
-
 header{
 text-align:center;
-padding:80px 20px;
+padding:70px 20px;
 }
 
 header img{
@@ -39,111 +34,54 @@ border-radius:50%;
 padding:10px;
 }
 
-h1{
-color:#1b5e20;
-font-size:42px;
-margin:20px 0 10px;
-}
+h1{color:#1b5e20;font-size:42px;margin:20px 0}
+h2{color:#1b5e20;border-bottom:3px solid #1b5e20;padding-bottom:10px}
 
-h2{
-color:#1b5e20;
-border-bottom:3px solid #1b5e20;
-padding-bottom:10px;
-}
-
-section{
-padding:60px 30px;
-}
+section{max-width:1200px;margin:auto;padding:50px 30px}
 
 .products{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-gap:30px;
+gap:30px
 }
 
 .card{
 border:1px solid #ddd;
 border-radius:10px;
 overflow:hidden;
-box-shadow:0 10px 25px rgba(0,0,0,0.1);
+background:white;
+box-shadow:0 10px 25px rgba(0,0,0,.1)
 }
 
-.card img{
-width:100%;
-height:230px;
-object-fit:cover;
-}
-
-.card div{
-padding:20px;
-}
-
-.card a{
-display:block;
-background:#1b5e20;
-color:white;
-text-align:center;
-padding:14px;
-text-decoration:none;
-font-weight:bold;
-}
+.card img{width:100%;height:220px;object-fit:cover}
+.card div{padding:20px}
+.card a{display:block;background:#1b5e20;color:white;text-align:center;padding:14px;text-decoration:none}
 
 .white-box{
 background:white;
-padding:50px 30px;
+padding:40px;
 border-radius:12px;
-box-shadow:0 10px 30px rgba(0,0,0,0.15);
-margin:50px 0;
+box-shadow:0 10px 25px rgba(0,0,0,.1);
+margin:40px 0
 }
 
-input,textarea{
-width:100%;
-padding:12px;
-margin:10px 0;
-border-radius:6px;
-border:1px solid #ccc;
-}
+table{width:100%;border-collapse:collapse;margin-top:20px}
+th,td{border:1px solid #ccc;padding:10px;text-align:left}
 
-button{
-background:#1b5e20;
-color:white;
-border:none;
-padding:14px 30px;
-font-size:16px;
-cursor:pointer;
-}
+input,textarea{width:100%;padding:12px;margin:10px 0;border-radius:6px;border:1px solid #ccc}
+button{background:#1b5e20;color:white;padding:14px 30px;border:none;font-size:16px}
 
-footer{
-background:#1b5e20;
-color:white;
-text-align:center;
-padding:30px;
-}
+footer{background:#1b5e20;color:white;text-align:center;padding:30px}
 </style>
 </head>
 
 <body>
 
-<div class="wrapper">
-
 <header>
 <img src="Kclogo.jpeg">
-  <div id="menuBtn" style="position:absolute;top:20px;right:20px;font-size:30px;cursor:pointer;color:#1b5e20;">
-☰
-</div>
-
-<div id="menu" style="display:none;position:fixed;top:0;right:0;width:250px;height:100%;background:#1b5e20;padding:30px;z-index:1000;">
-<a href="index.html" style="color:white;display:block;margin:20px 0;text-decoration:none;">Home</a>
-<a href="low-ec-cocopeat.html" style="color:white;display:block;margin:20px 0;text-decoration:none;">Low EC Cocopeat</a>
-<a href="high-ec-cocopeat.html" style="color:white;display:block;margin:20px 0;text-decoration:none;">High EC Cocopeat</a>
-<a href="grow-bags.html" style="color:white;display:block;margin:20px 0;text-decoration:none;">Grow Bags</a>
-<a href="poultry-coco-pith.html" style="color:white;display:block;margin:20px 0;text-decoration:none;">Poultry Coco Pith</a>
-<a href="nursery-cocopeat.html" style="color:white;display:block;margin:20px 0;text-decoration:none;">Nursery Cocopeat</a>
-<a href="#" onclick="closeMenu()" style="color:white;display:block;margin:40px 0;text-decoration:none;">Close ✖</a>
-</div>
 <h1>KARTHICK COIRS</h1>
 <p>Premium Cocopeat & Coir Products Manufacturer</p>
-<p>Palani, Tamil Nadu – India</p>
+<p>Palani, Tamil Nadu, India</p>
 <p><strong>GSTIN:</strong> 33CJRPV0480M1ZI</p>
 </header>
 
@@ -151,121 +89,45 @@ padding:30px;
 <h2>Our Products</h2>
 <div class="products">
 
-<div class="card">
-<img src="Lowec.jpeg">
-<div>
-<h3>Low EC Cocopeat</h3>
-<p>Washed and buffered cocopeat ideal for sensitive crops, hydroponics and export quality farming.</p>
-</div>
-<a href="low-ec-cocopeat.html">View Details</a>
-</div>
+<div class="card"><img src="Lowec.jpeg"><div><h3>Low EC Cocopeat</h3><p>Washed & buffered export grade cocopeat.</p></div><a href="low-ec-cocopeat.html">View</a></div>
 
-<div class="card">
-<img src="Highec.jpeg">
-<div>
-<h3>High EC Cocopeat</h3>
-<p>Natural cocopeat used for soil conditioning, landscaping and general agriculture.</p>
-</div>
-<a href="high-ec-cocopeat.html">View Details</a>
-</div>
+<div class="card"><img src="Highec.jpeg"><div><h3>High EC Cocopeat</h3><p>Natural cocopeat for soil conditioning.</p></div><a href="high-ec-cocopeat.html">View</a></div>
 
-<div class="card">
-<img src="Growbag.jpeg">
-<div>
-<h3>Grow Bags</h3>
-<p>Ready-to-use cocopeat grow bags for greenhouse vegetables & flowers.</p>
-</div>
-<a href="grow-bags.html">View Details</a>
-</div>
+<div class="card"><img src="Growbag.jpeg"><div><h3>Grow Bags</h3><p>Ready to use cocopeat grow bags.</p></div><a href="grow-bags.html">View</a></div>
 
-<div class="card">
-<img src="Polutary.jpeg">
-<div>
-<h3>Poultry Coco Pith</h3>
-<p>Highly absorbent bedding material for poultry farms.</p>
-</div>
-<a href="poultry-coco-pith.html">View Details</a>
-</div>
+<div class="card"><img src="Polutary.jpeg"><div><h3>Poultry Coco Pith</h3><p>High absorbent poultry bedding.</p></div><a href="poultry-coco-pith.html">View</a></div>
 
-<div class="card">
-<img src="Nursery.jpeg">
-<div>
-<h3>Nursery Cocopeat</h3>
-<p>Fine cocopeat for seed trays, polybags and nursery plants.</p>
-</div>
-<a href="nursery-cocopeat.html">View Details</a>
-</div>
+<div class="card"><img src="Nursery.jpeg"><div><h3>Nursery Cocopeat</h3><p>Fine cocopeat for seedlings.</p></div><a href="nursery-cocopeat.html">View</a></div>
 
 </div>
 </section>
 
-<div class="white-box">
+<section class="white-box">
 <h2>Meet Our CEO</h2>
-<p><strong>Karthick Venkidusamy – Founder & CEO</strong></p>
-<p>
-With 5+ years of experience in cocopeat manufacturing and export, Karthick Venkidusamy leads Karthick Coirs with a strong focus on quality, consistency and global standards. Under his leadership, the company has built a reputation for reliable supply, premium grade cocopeat and international export excellence.
-</p>
-</div>
+<p><strong>Karthick Venkidusamy</strong> – Founder & CEO</p>
+<p>With 5+ years of experience in cocopeat manufacturing and export, Karthick Coirs delivers premium quality products with reliable global supply.</p>
+</section>
 
-<div class="white-box">
-<h2>Product Enquiry</h2>
+<section class="white-box">
+<h2>Export Enquiry</h2>
 <form action="https://formsubmit.co/kccocoproducts@gmail.com" method="POST">
-<input type="text" name="name" placeholder="Your Name" required>
-<input type="email" name="email" placeholder="Your Email" required>
-<input type="text" name="product" placeholder="Product Interested" required>
-<textarea name="message" placeholder="Your Requirement" required></textarea>
+<input name="name" placeholder="Name" required>
+<input name="email" type="email" placeholder="Email" required>
+<input name="country" placeholder="Country" required>
+<input name="product" placeholder="Product Required" required>
+<input name="quantity" placeholder="Quantity (MT)" required>
+<textarea name="message" placeholder="Requirement"></textarea>
 <button type="submit">Send Enquiry</button>
 </form>
-</div>
-
-<div class="white-box">
-<h2>Export Packing & Container Loading</h2>
-<p>
-We supply 5 Kg compressed cocopeat blocks and loose cocopeat packed in moisture-proof poly wrapping. Products are palletized and shrink wrapped for safe export container loading.
-</p>
-<ul>
-<li>20 FT container – up to 18 MT</li>
-<li>40 FT container – up to 26 MT</li>
-<li>Moisture proof export packing</li>
-<li>Custom buyer labeling</li>
-<li>Fumigation & palletized loading</li>
-</ul>
-</div>
+</section>
 
 <footer>
 📞 9363940486 | ✉ kccocoproducts@gmail.com <br>
-GSTIN: 33CJRPV0480M1ZI <br>
-© 2026 Karthick Coirs – Palani, Tamil Nadu
+🌍 https://karthickcoirs.com
 </footer>
 
-</div>
-</div>
-</div>
-</div>
+<!-- WhatsApp Button -->
+<a href="https://wa.me/919363940486" style="position:fixed;bottom:20px;right:20px;background:#25D366;color:white;padding:15px 20px;border-radius:50px;text-decoration:none;">💬 WhatsApp</a>
 
-<!-- WhatsApp Floating Button -->
-<a href="https://wa.me/919363940486" target="_blank" style="
-position:fixed;
-bottom:20px;
-right:20px;
-background:#25D366;
-color:white;
-padding:15px 20px;
-border-radius:50px;
-font-size:18px;
-text-decoration:none;
-box-shadow:0 4px 10px rgba(0,0,0,0.3);
-z-index:999;
-">
-💬 WhatsApp
-</a>
-  <script>
-document.getElementById("menuBtn").onclick = function(){
-  document.getElementById("menu").style.display = "block";
-}
-function closeMenu(){
-  document.getElementById("menu").style.display = "none";
-}
-</script>
 </body>
 </html>
