--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 <style>
 body{
 background:
-linear-gradient(rgba(255,255,255,0.85),rgba(255,255,255,0.85)),
+linear-gradient(rgba(255,255,255,0.65),rgba(255,255,255,0.65)),
 url('coconut-bg.jpeg');
 background-size:cover;
 background-attachment:fixed;
+background-position:center;
 }
 .fade{animation:fadeIn 1.2s ease}
 @keyframes fadeIn{
