--- a/raw-coconut.html
+++ b/raw-coconut.html
@@ -2,43 +2,105 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Raw Coconut | Karthick Coirs</title>
-<script src="https://cdn.tailwindcss.com"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body{
+margin:0;
+font-family:Georgia,serif;
+background:#f8fff8;
+color:#222;
+}
+
+header{
+background:#1b5e20;
+color:white;
+text-align:center;
+padding:40px 20px;
+}
+
+section{
+max-width:1000px;
+margin:auto;
+padding:40px 20px;
+}
+
+h1,h2{color:#1b5e20;}
+
+.product-box{
+background:white;
+border-radius:12px;
+box-shadow:0 4px 12px rgba(0,0,0,.1);
+padding:25px;
+}
+
+.product-box img{
+width:100%;
+max-height:350px;
+object-fit:cover;
+border-radius:10px;
+margin-bottom:20px;
+}
+
+ul{line-height:1.8;}
+a.btn{
+display:inline-block;
+margin-top:20px;
+background:#1b5e20;
+color:white;
+padding:12px 20px;
+text-decoration:none;
+border-radius:6px;
+}
+</style>
 </head>
 
-<body class="bg-gray-100">
+<body>
 
-<div class="max-w-5xl mx-auto p-6">
-<a href="index.html" class="text-green-700">← Back</a>
+<header>
+<h1>Raw Coconut</h1>
+<p>Natural Farm Fresh Coconut Supply</p>
+</header>
 
-<div class="bg-white p-8 rounded shadow mt-4 grid md:grid-cols-2 gap-6">
+<section>
+<div class="product-box">
 
-<img src="IMG_1167.jpg" class="rounded shadow">
+<img src="IMG_1167.jpg" alt="Raw Coconut">
 
-<div>
-<h1 class="text-3xl font-bold text-green-800 mb-3">Raw Coconut</h1>
-
-<p class="mb-4">
-We supply fresh, mature raw coconuts sourced directly from
-farms in Tamil Nadu for food, oil, industrial and export use.
+<h2>Product Description</h2>
+<p>
+We supply high quality raw coconuts directly from farmers in Tamil Nadu.
+Our coconuts are fresh, natural, and suitable for coir, oil mills, exporters,
+temples, traders and food industries.
 </p>
 
-<h2 class="font-bold mt-4">Specifications</h2>
-<ul class="list-disc ml-6">
-<li>Farm fresh mature coconuts</li>
-<li>Natural & chemical free</li>
-<li>Bulk & export supply</li>
-<li>Custom packing available</li>
+<h2>Uses</h2>
+<ul>
+<li>Coir & Cocopeat Manufacturing</li>
+<li>Oil Extraction Units</li>
+<li>Temple & Wholesale Supply</li>
+<li>Food Processing Industry</li>
 </ul>
 
-<a href="https://wa.me/919363940486"
-class="inline-block mt-5 bg-green-700 text-white px-6 py-3 rounded">
-Enquire on WhatsApp
-</a>
+<h2>Quality Specifications</h2>
+<ul>
+<li>Fresh & Mature Coconuts</li>
+<li>Natural Brown Husk</li>
+<li>High Oil Content</li>
+<li>No Chemical Treatment</li>
+</ul>
+
+<h2>Packing</h2>
+<ul>
+<li>Loose Bulk</li>
+<li>Gunny Bags</li>
+<li>Truck Load / Container Load</li>
+</ul>
+
+<a href="index.html" class="btn">← Back to Home</a>
 
 </div>
-</div>
-</div>
+</section>
+
 </body>
 </html>
